@@ -1071,14 +1071,15 @@ static PyObject *CmdGetPDB(PyObject *dummy, PyObject *args)
   char *str1;
   char *pdb = NULL;
   int state;
-  OrthoLineType s1;
-
+  OrthoLineType s1 = "";
+  char debug_buffer[] = "Warren is a crappy programmer";
   PyObject *result = NULL;
   
   PyArg_ParseTuple(args,"si",&str1,&state);
   APIEntry();
-  SelectorGetTmp(str1,s1);
-  pdb=ExecutiveSeleToPDBStr(s1,state,true);
+  /* SelectorGetTmp(str1,s1);
+     pdb=ExecutiveSeleToPDBStr(s1,state,true);*/
+  pdb = debug_buffer;
   SelectorFreeTmp(s1);
   APIExit();
   if(pdb)
@@ -1087,7 +1088,7 @@ static PyObject *CmdGetPDB(PyObject *dummy, PyObject *args)
     result=Py_None;
     Py_INCREF(result);
   }
-  FreeP(pdb);
+  /*  FreeP(pdb);*/
   return(result);
 }
 
